The export fold emits nodes in log order, byte-identical across JVMs (#207) (#215)
* Spec and plan: the export fold emits nodes in a stable, log order (#207)

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* The export fold emits nodes and edges in log order (#207)

LogProjection copied its node map with Map.copyOf, whose iteration order is
unspecified and salted per JVM. Two JVMs drew one unchanged log in opposite
orders, so a DOT or GraphML diff between two runs was noise and a real change
hid in it. ADR 43 made recommend's output byte-identical for this reason, and
ADR 59 records Map.copyOf breaking it once already in Equivalences.

The map now keeps insertion order - the same unmodifiable LinkedHashMap copy
Equivalences.canonicalByLocal makes - so nodes and edges come out in log
order, the position of the first surviving claim naming them. Sorting by qid
was the alternative: stable too, but a choice where a fact would do, and it
would reorder the whole picture every time an id changed shape.

A stand-in node has no claim of its own, so it is drawn first, in the order of
the merges that named it: standIns is a pre-pass that finishes before the fold
begins (#178), and putting it back at the merge's own row is how the two folds
drift. Stated in the javadoc and asserted.

Four tests: the log-order pin over DOT and GraphML, a reversal control that a
sort would not move, the stand-in placement, and a forked JVM diffing the two
outputs the salt used to separate.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* Pin the seeded position, the surviving claim, and the fork's budget (#207)

Review follow-ups on the export fold's log order.

The stand-in test proved only that a stand-in is drawn first, not the half
that bites: a later real claim on the canonical id keeps the seed's position
rather than moving to its own row. The fixture now names PRESSING in the last
row of the log and expects it drawn first, with the source's label. Seen red
against a 